--- a/loanportal/templates/loanapplication.html
+++ b/loanportal/templates/loanapplication.html
@@ -37,79 +37,72 @@
         <br>
         <form action="/loanportal/loanapplication" accept-charset="UTF-8"
               method="post" enctype="multipart/form-data">{% csrf_token %}
+            <div class="card p-3">
+                <div class="card-title text-warning">Three first fields are mandatory</div>
+                <div class="row" style="justify-content: space-around">
+                    <input type="text" name="all_documents" value="on" hidden/>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://www.getdinerotoday.com/static/images/drivers.png" class="card-img-top"
+                                 width="100%" height="250px">
+                            <div class="card-body" align="center">
+                                <h5 class="card-title">Upload Your Drivers License Or Government-Issued Photo ID</h5>
 
-            <div class="row" style="justify-content: space-around">
-                <input type="text" name="all_documents" value="on" hidden/>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://www.getdinerotoday.com/static/images/drivers.png" class="card-img-top"
-                             width="100%" height="250px">
-                        <div class="card-body" align="center">
-                            <h5 class="card-title">Upload Your Drivers License Or Government-Issued Photo ID</h5>
-
-                            <br>
-                            <h4>Upload Your Loan Documents Here</h4>
-                            <input type="file" name="Driver License / Photo Id" id="document" required/>
-
-                            <br>
-                            <br>
-                            <br>
-                            <div style="display: flex; justify-content: space-around">
-                                <button type="submit" name="commit" class="btn btn-primary">Submit</button>
+                                <br>
+                                <h4>Upload Your Loan Documents Here</h4>
+                                <input type="file" name="Driver License / Photo Id" id="document" required/>
 
                             </div>
-                            <br>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://www.getdinerotoday.com/static/images/socialcard.png" class="card-img-top"
-                             width="100%" height="250px">
-                        <div class="card-body" align="center"><h5 class="card-title">Upload Your Social Security
-                            Card</h5>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://www.getdinerotoday.com/static/images/socialcard.png" class="card-img-top"
+                                 width="100%" height="250px">
+                            <div class="card-body" align="center"><h5 class="card-title">Upload Your Social Security
+                                Card</h5>
 
-                            <br>
-                            <h4>Upload Your Loan Documents Here</h4>
-                            <input type="file" name="Social Security Card" id="document" required/>
-                            <br>
-                            <br>
-                            <br>
-                            <div style="display: flex; justify-content: space-around">
-                                <button type="submit" name="commit" class="btn btn-primary">Submit</button>
+                                <br>
+                                <br>
+                                <h4>Upload Your Loan Documents Here</h4>
+                                <input type="file" name="Social Security Card" id="document" required/>
+
+                                <br>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://www.getdinerotoday.com/static/images/3month.png" class="card-img-top"
+                                 width="100%" height="250px">
+                            <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 3 Months Of
+                                Bank
+                                Statements Click To Call Loan
+                                Support</h5>
+
+                                <br>
+                                <h4>Upload Your Loan Documents Here</h4>
+                                <input type="file" name="Last 3 Months Of Bank Statement" id="document" required/>
+
+{#                                <div style="display: flex; justify-content: space-around">#}
+{#                                    <button type="submit" name="commit" class="btn btn-primary">Submit</button>#}
+{##}
+{#                                </div>#}
 
                             </div>
-                            <br>
                         </div>
                     </div>
+
                 </div>
+                         <div style="display: flex; justify-content: space-around">
+                                    <button type="submit" name="commit" class="btn btn-primary btn-block">Submit</button>
 
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://www.getdinerotoday.com/static/images/3month.png" class="card-img-top"
-                             width="100%" height="250px">
-                        <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 3 Months Of Bank
-                            Statements Click To Call Loan
-                            Support</h5>
-
-                            <br>
-                            <h4>Upload Your Loan Documents Here</h4>
-                            <input type="file" name="Last 3 Months Of Bank Statement" id="document" required/>
-                            <br>
-                            <br>
-                            <br>
-                            <div style="display: flex; justify-content: space-around">
-                                <button type="submit" name="commit" class="btn btn-primary">Submit</button>
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
+                                </div>
             </div>
-
         </form>
+
+
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
