--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -702,9 +702,9 @@
                             <br>
                             <div class="col-md-12 mt-2">
                                 <a href="{% url "business:business-credit-steps-onlyprograms" %}"
-                                   class="btn btn-theme btn-circle">$999 Annual Payment Option</a><br><br>
+                                   class="btn btn-theme btn-circle">${{ yearly }} Annual Payment Option</a><br><br>
                                 <a href="{% url "business:business-credit-steps-onlyprograms" %}"
-                                   class="btn btn-theme btn-circle">$109.99 Monthly Payment Option</a><br>
+                                   class="btn btn-theme btn-circle">${{ monthly }} Monthly Payment Option</a><br>
                             </div>
                         </div>
                     </div>
