--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -136,7 +136,7 @@
                         </div>
                         <a class="btn btn-white btn-sm" href="/dashboard" target="_blank"
                            data-text="Client Login">
-                            <span>Client<span></span> <span></span><span></span>  <span></span><span></span> <span></span> <span>Login</span><span></span><span></span><span></span><span></span></span>
+                            Client Login
                         </a>
                     </nav>
                 </div>
