--- a/loanportal/templates/loanapplication.html
+++ b/loanportal/templates/loanapplication.html
@@ -25,6 +25,7 @@
 
     <section class="main-content">
 
+
         <div class="row">
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/yQq9ZsT3yv0" frameborder="0"
@@ -33,12 +34,166 @@
             </div>
         </div>
         <br>
-        <center><h2>Upload Your Documents Below</h2></center>
+        <div style="text-align: center;"><h2>Upload Your Documents Below</h2></div>
+
         <br>
+        <div class="row justify-content-center">
+            <div class="col-md-8 mb-5 card p-2">
+                <div class="col-md-12">
+                    <div class="card-title">Enter your personal data</div>
+                    {% if error %}
+                        <div class="text-danger"><h4>Please fill all required fields</h4></div>
+                    {% endif %}
+                    <form id="userdata" method="post">{% csrf_token %}
+                        <div class="row mb-2">
+                            <div class="col-6 required">
+                                {{ form.first_name.label_tag }}*{{ form.first_name }}
+                            </div>
+                            <div class="col-6">
+                                {{ form.last_name.label_tag }}*{{ form.last_name }}
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-6">
+                                {{ form.business_name.label_tag }}*{{ form.business_name }}
+                            </div>
+                            <div class="col-6">
+                                {{ form.duns.label_tag }}{{ form.duns }}
+                            </div>
+                        </div>
+                        <div class="row mb-5">
+                            <div class="col-6">
+
+                            </div>
+                            <div class="col-6">
+                                {{ form.ein.label_tag }}*{{ form.ein }}
+                            </div>
+                        </div>
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_street_address_1.label_tag }}*{{ form.personal_street_address_1 }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_street_address_1.label_tag }}*{{ form.business_street_address_1 }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_street_address_1.label_tag }}{{ form.billing_street_address_1 }}
+                            </div>
+                        </div>
+
+                        <!--  <div class="row mb-2">
+                        <div class="col-4">
+                            {{ form.personal_street_address_2.label_tag }}{{ form.personal_street_address_2 }}
+                        </div>
+                        <div class="col-4">
+                            {{ form.business_street_address_2.label_tag }}{{ form.business_street_address_2 }}
+                        </div>
+                        <div class="col-4">
+                            {{ form.billing_street_address_2.label_tag }}{{ form.billing_street_address_2 }}
+                        </div>
+                    </div> -->
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_zip_code.label_tag }}*{{ form.personal_zip_code }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_zip_code.label_tag }}*{{ form.business_zip_code }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_zip_code.label_tag }}{{ form.billing_zip_code }}
+                            </div>
+                        </div>
+
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_state.label_tag }}*{{ form.personal_state }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_state.label_tag }}*{{ form.business_state }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_state.label_tag }}{{ form.billing_state }}
+                            </div>
+                        </div>
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_country.label_tag }}*{{ form.personal_country }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_country.label_tag }}*{{ form.business_country }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_country.label_tag }}{{ form.billing_country }}
+                            </div>
+                        </div>
+
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_city.label_tag }}*{{ form.personal_city }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_city.label_tag }}*{{ form.business_city }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_city.label_tag }}{{ form.billing_city }}
+                            </div>
+                        </div>
+
+                        <div class="row mb-2">
+                            <div class="col-4">
+                                {{ form.personal_phone.label_tag }}*{{ form.personal_phone }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.business_phone.label_tag }}*{{ form.business_phone }}
+                            </div>
+                            <div class="col-4">
+                                {{ form.billing_phone.label_tag }}{{ form.billing_phone }}
+                            </div>
+                        </div>
+
+                        <div class="row mb-2">
+                            <div class="col-6">
+                                {{ form.email.label_tag }}*{{ form.email }}
+                            </div>
+                            <div class="col-6">
+                                {{ form.website.label_tag }}{{ form.website }}
+                            </div>
+                        </div>
+
+                        <div class="row mb-2">
+                            <div class="col-6">
+                                {{ form.toll_free_number.label_tag }}{{ form.toll_free_number }}
+                            </div>
+                            <div class="col-6">
+                                {{ form.fax_number.label_tag }}{{ form.fax_number }}
+                            </div>
+                        </div>
+
+
+                        <div class="btn-toolbar">
+                            {#                            <input type="text" name="userdata" value="on" hidden/>#}
+                            {#                            <input type="submit"#}
+                            {#                                   value="Submit"#}
+                            {#                                   class="btn btn-primary mr-1 btn-block"/>#}
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <form action="/loanportal/loanapplication" accept-charset="UTF-8"
-              method="post" enctype="multipart/form-data">{% csrf_token %}
+              method="post" enctype="multipart/form-data" id="form1" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form1');
+                                                                return true;
+                                                                })()">{% csrf_token %}
             <div class="card p-3">
-                <div class="card-title text-warning">Three first fields are mandatory</div>
+                <div class="card-title" style="color: darkblue">Three first fields are mandatory</div>
                 <div class="row" style="justify-content: space-around">
                     <input type="text" name="all_documents" value="on" hidden/>
                     <div class="col-md-4">
@@ -63,7 +218,7 @@
                                 Card</h5>
 
                                 <br>
-                                <br>
+
                                 <h4>Upload Your Loan Documents Here</h4>
                                 <input type="file" name="Social Security Card" id="document" required/>
 
@@ -81,24 +236,19 @@
                                 Statements Click To Call Loan
                                 Support</h5>
 
-                                <br>
+
                                 <h4>Upload Your Loan Documents Here</h4>
                                 <input type="file" name="Last 3 Months Of Bank Statement" id="document" required/>
-
-{#                                <div style="display: flex; justify-content: space-around">#}
-{#                                    <button type="submit" name="commit" class="btn btn-primary">Submit</button>#}
-{##}
-{#                                </div>#}
 
                             </div>
                         </div>
                     </div>
 
                 </div>
-                         <div style="display: flex; justify-content: space-around">
-                                    <button type="submit" name="commit" class="btn btn-primary btn-block">Submit</button>
+                <div style="display: flex; justify-content: space-around">
+                    <button type="submit" name="commit" class="btn btn-primary btn-block">Submit</button>
 
-                                </div>
+                </div>
             </div>
         </form>
 
@@ -111,7 +261,11 @@
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 6 Months Of Bank
                         Statements Click To Call Loan
                         Support</h5>
-                        <form action="/loanportal/loanapplication" accept-charset="UTF-8"
+                        <form action="/loanportal/loanapplication" accept-charset="UTF-8" id="form2" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form2');
+                                                                return true;
+                                                                })()"
                               method="post" enctype="multipart/form-data">{% csrf_token %}
                             <br>
                             <h4>Upload Your Loan Documents Here</h4>
@@ -136,7 +290,11 @@
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Year Of Business Tax
                         Returns Click To Call Loan
                         Support</h5>
-                        <form action="/loanportal/loanapplication" accept-charset="UTF-8"
+                        <form action="/loanportal/loanapplication" accept-charset="UTF-8" id="form3" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form3');
+                                                                return true;
+                                                                })()"
                               method="post" enctype="multipart/form-data">{% csrf_token %}
                             <br>
                             <h4>Upload Your Loan Documents Here</h4>
@@ -162,7 +320,11 @@
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last 2 Years Of Business
                         Tax Returns Click To Call Loan
                         Support</h5>
-                        <form action="/loanportal/loanapplication" accept-charset="UTF-8"
+                        <form action="/loanportal/loanapplication" accept-charset="UTF-8" id="form4" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form4');
+                                                                return true;
+                                                                })()"
                               method="post" enctype="multipart/form-data">{% csrf_token %}
                             <br>
                             <h4>Upload Your Loan Documents Here</h4>
@@ -187,7 +349,11 @@
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Year Of Personal Tax
                         Returns Click To Call Loan
                         Support</h5>
-                        <form action="/loanportal/loanapplication" accept-charset="UTF-8"
+                        <form action="/loanportal/loanapplication" accept-charset="UTF-8" id="form5" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form5');
+                                                                return true;
+                                                                })()"
                               method="post" enctype="multipart/form-data">{% csrf_token %}
                             <br>
                             <h4>Upload Your Loan Documents Here</h4>
@@ -212,7 +378,11 @@
                     <div class="card-body" align="center"><h5 class="card-title">Upload Your Last Two Years Of Personal
                         Tax Returns Click To Call Loan
                         Support</h5>
-                        <form action="/loanportal/loanapplication" accept-charset="UTF-8"
+                        <form action="/loanportal/loanapplication" accept-charset="UTF-8" id="form6" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#form6');
+                                                                return true;
+                                                                })()"
                               method="post" enctype="multipart/form-data">{% csrf_token %}
                             <br>
                             <h4>Upload Your Loan Documents Here</h4>
