--- a/getdinerotoday/templates/layout/BaseLayout.html
+++ b/getdinerotoday/templates/layout/BaseLayout.html
@@ -16,9 +16,11 @@
 {% block content %}
 {% endblock content %}
 
+{% include "components/AlanAI.html" %}
+
 {% include "components/Footer.html" %}
 {% include "components/JavaScriptBlock.html" %}
-{% block javascriptblock %}	
+{% block javascriptblock %}
 {% endblock javascriptblock %}
 </body>
 </html>
