--- a/getdinerotoday/templates/components/StylesBlock.html
+++ b/getdinerotoday/templates/components/StylesBlock.html
@@ -18,4 +18,6 @@
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
 <script src="{% static "js/x-frame-bypass.js" %}" type="module"></script>
