--- a/getdinerotoday/templates/components/AlanAI.html
+++ b/getdinerotoday/templates/components/AlanAI.html
@@ -1,8 +1,8 @@
+{% load static %}
 <div class="alan-btn"></div>
 
 
-<script type="text/javascript"
-        src="https://studio.alan.app/web/lib/alan_lib.js"></script>
+<script type="text/javascript" src="https://studio.alan.app/web/lib/alan_lib.js"></script>
 <script>
     var alanBtnInstance = alanBtn({
         key: "d2430b915c6ca49037224e6c859c00b22e956eca572e1d8b807a3e2338fdd0dc/stage",
@@ -20,8 +20,10 @@
                 }
             } else if (commandData.command === "order") {
                 switch (commandData.product) {
-
                 }
+            } else if (commandData.command === "addProduct") {
+                var prod = commandData.product
+                $(`input[name="${prod}"]`).closest("form").submit()
             }
         },
         rootEl: document.getElementById("alan-btn"),
