--- a/loanportal/templates/loanapplication.html
+++ b/loanportal/templates/loanapplication.html
@@ -36,7 +36,7 @@
         <br>
         <div class="row justify-content-center">
             <div class="col-md-8 card">
-            <div class="card-title pt-2">Uploaded documents</div>
+                <div class="card-title pt-2">Uploaded documents</div>
                 <table id="documts" class="table table-striped dt-responsive nowrap">
                     <thead>
                     <tr>
@@ -180,8 +180,21 @@
                             </div>
                         </div>
                         <div class="btn-toolbar">
+
                         </div>
                     </form>
+                    <div class="btn-toolbar">
+                        <form id="datadata" method="post" onsubmit="(function(){
+                                                                console.log('data updated')
+                                                                $('#userdata :input').not(':submit').clone().hide().appendTo('#datadata');
+                                                                return true;
+                                                                })()">{% csrf_token %}
+                            <input type="submit"
+                                   name="saveData"
+                                   value="Save Information"
+                                   class="btn btn-primary mr-1"/>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
