--- a/business/templates/financingProducts/tradelines.html
+++ b/business/templates/financingProducts/tradelines.html
@@ -15,15 +15,13 @@
     <section class="main-content">
         <div class="row ">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/WstWwaWsNuo" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/eNpVZIv8Mgw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
-
+        <br><br>
         <div class="row justify-content-center">
-            <div class="col-md-8 mb-5 card p-2">
+            <div class="col-md-12 mb-5 card p-2">
                 <div class="col-md-12">
                     <div class="card-title">Enter your personal data</div>
                     {% if error %}
