--- a/whitelabelpartnerportal/templates/marketingroi.html
+++ b/whitelabelpartnerportal/templates/marketingroi.html
@@ -15,9 +15,7 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/ycSr0-gXmPc" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/ELtqANOk8Ho" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="row">
