--- a/getdinerotoday/templates/landingpages/layout/LandingLayout.html
+++ b/getdinerotoday/templates/landingpages/layout/LandingLayout.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="HTML5 Template"/>
-    <meta name="description" content="HTML5 Template"/>
+    <meta name="keywords" content="Get Dinero Today"/>
+    <meta name="description" content="Get Dinero Today"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
     {% if dynamic %}
