--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -50,15 +50,15 @@
                                class="nav-link"> Add Business Tradelines </a>
                         </li>
                         {% if dynamic.sub_name != "" %}
-                        <li class="nav-item">
-                            <a href="https://www.youtube.com/watch?v=tD1H2-1xihA" target="_blank"
-                               class="nav-link"> Watch Webinar On Building Business Credit </a>
-                        </li>
+                            <li class="nav-item">
+                                <a href="https://www.youtube.com/watch?v=tD1H2-1xihA" target="_blank"
+                                   class="nav-link"> Watch Webinar On Building Business Credit </a>
+                            </li>
                         {% else %}
-                        <li class="nav-item">
-                            <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
-                               class="nav-link"> Watch Webinar On Building Business Credit </a>
-                        </li>
+                            <li class="nav-item">
+                                <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
+                                   class="nav-link"> Watch Webinar On Building Business Credit </a>
+                            </li>
                         {% endif %}
 
                         <li class="nav-item">
@@ -232,8 +232,13 @@
                                 Course </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/{{ request.resolver_match.app_name }}/credit-affiliate" class="nav-link">Personal
-                                Credit Repair Done For You Services {{ verbose_portal_name }} </a>
+                            {% if dynamic and dynamic.creditRepairLink %}
+                                <a href="{{ dynamic.creditRepairLink }}" class="nav-link">Personal Credit Repair Done
+                                    For You Services {{ verbose_portal_name }} </a>
+                            {% else %}
+                                <a href="/{{ request.resolver_match.app_name }}/credit-affiliate" class="nav-link">Personal
+                                    Credit Repair Done For You Services {{ verbose_portal_name }} </a>
+                            {% endif %}
                         </li>
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/customer-financing-offer" class="nav-link">
@@ -274,12 +279,13 @@
                             <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money
                                 Referring Friends! </a>
                         </li>
-                          {% if dynamic.sub_name == "" %}
-                        <li class="nav-item">
-                            <a href="https://getdinerotoday1.leaddyno.com/" target="_blank" class="nav-link">Go To Affiliate Agent
-                                Portal</a>
-                        </li>
-                          {% endif %}
+                        {% if dynamic.sub_name == "" %}
+                            <li class="nav-item">
+                                <a href="https://getdinerotoday1.leaddyno.com/" target="_blank" class="nav-link">Go To
+                                    Affiliate Agent
+                                    Portal</a>
+                            </li>
+                        {% endif %}
                         {% if dynamic.sub_name == "" %}
                             <li class="nav-item">
                                 <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link"> Go To
@@ -302,7 +308,7 @@
                             <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome
                                 Extension Portal </a>
                         </li>
-                      <!--  <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/lifegoals" class="nav-link">Life Money Hacks</a></li> -->
+                        <!--  <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/lifegoals" class="nav-link">Life Money Hacks</a></li> -->
 
                         <li class="nav-item">
                             {% if dynamic.iphoneApp %}
