--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -328,6 +328,17 @@
                                     Chrome Extension </a>
                             {% endif %}
                         </li>
+
+                        <li class="nav-item">
+                            <a href="{% url 'business:faqs' %}" class="nav-link"><span
+                                    class="toggle-none">FAQs</span></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="{% url 'business:chat' %}" class="nav-link"><span
+                                    class="toggle-none">Chat</span></a>
+                        </li>
+
                         <br><br><br>
                     </ul>
                 </div>
