--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -330,13 +330,13 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="{% url 'business:faqs' %}" class="nav-link"><span
-                                    class="toggle-none">FAQs</span></a>
+                            <a href="https://businessbuilders.zendesk.com/hc/en-us/sections/360010349512-FAQ" target="_blank" class="nav-link"><span
+                                    class="toggle-none">Frequently Asked Questions</span></a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="{% url 'business:chat' %}" class="nav-link"><span
-                                    class="toggle-none">Chat</span></a>
+                            <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
+                                    class="toggle-none">Live Chat</span></a>
                         </li>
 
                         <br><br><br>
