--- a/whitelabelpartnerportal/templates/partner-commissions.html
+++ b/whitelabelpartnerportal/templates/partner-commissions.html
@@ -46,52 +46,73 @@
               <tbody>
                   <tr>
                     <td>Business Builder Annual Package</td>
-                    <td>Annual One Time Payment Of $999</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price/td>
                     <td>40%</td>
-                    <td>$400</td>
-                    <td>7 Days From Purchase</td>
+                    <td>40% Of Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Business Builder Monthly Package</td>
-                    <td>Monthly Payments Of $109.99</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price</td>
                     <td>40%</td>
-                    <td>$44 per month</td>
-                    <td>7 Days From Purchase</td>
+                    <td>40% Of Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Toll Free Number</td>
-                    <td>$49 A Month Or $599 For The Year</td>
-                    <td>25%</td>
-                    <td>$12.25 per month or $150 per year</td>
-                    <td>7 Days From Purchase</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>40%</td>
+                    <td>40% Of Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Fax Number</td>
-                    <td>$19.99 Per Month Or $240.99 For The Year</td>
-                    <td>25%</td>
-                    <td>$5 per month or $60 per year</td>
-                    <td>7 Days From Purchase</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>40%</td>
+                    <td>40% Of Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Professional Email Address</td>
-                    <td>$29.99 For The Year</td>
-                    <td>5%</td>
-                    <td>$1.50 Per Year</td>
-                    <td>7 Days From Purchase</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>10%</td>
+                      <td>10% Of Whatever You Charge</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Domain Name</td>
-                    <td>$13.99 For The Year</td>
-                    <td>5%</td>
-                    <td>$0.70 per year</td>
-                    <td>7 Days From Purchase</td>
+                    <td>Whatever You Would Like To Charge Over Our Minimum Price</td>
+                    <td>10%</td>
+                    <td>10% Of Whatever You Charge</td>
+                    <td>14 days from Purchase</td>
                   </tr>
                   <tr>
                     <td>Merchant Account</td>
                     <td>Free - $10 per month per product</td>
                     <td>Variable Bonus</td>
                     <td>$100-$200</td>
-                    <td>7 Days From Purchase</td>
+                    <td>14 days from Purchase</td>
+                  </tr>
+                  <tr>
+                    <td>Merchant Account Residual Payments</td>
+                    <td>40% Residual Commission Split With Our Company</td>
+                    <td>Variable Amount</td>
+                    <td>40% Residual Commission Split With Our Company</td>
+                    <td>14 days from Purchase</td>
+                  </tr>
+                  <tr>
+                    <td>Autodialer</td>
+                    <td>0.035 per message</td>
+                    <td>40%</td>
+                    <td>40% Of What They Purchase</td>
+                    <td>14 days from Purchase</td>
+                  </tr>
+                  <tr>
+                    <td>Business Loans</td>
+                    <td>No Charge For Them</td>
+                    <td>40%</td>
+                    <td>40% Commission Split With Our Company</td>
+                    <td>14 days from Purchase</td>
                   </tr>
               </tbody>
         </table>
