--- a/whitelabelpartnerportal/templates/productManagement/productManagement.html
+++ b/whitelabelpartnerportal/templates/productManagement/productManagement.html
@@ -19,7 +19,7 @@
 {% block content %}
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Your Clients Who Have Signed Up Under Your Portal</h2></div>
+            <h2>Choose Your Pricing</h2></div>
     </div>
 
     <section class="main-content">
