--- a/business/templates/help/chat.html
+++ b/business/templates/help/chat.html
@@ -26,23 +26,12 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-
+          
+<!-- End of businessbuilders Zendesk Widget script -->
             </div>
         </div>
     </section>
 
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
     <!--End of Tawk.to Script-->
 
 {% endblock %}
